--- a/templates/actors/parts/stats/actor-injuries.hbs
+++ b/templates/actors/parts/stats/actor-injuries.hbs
@@ -11,6 +11,6 @@
         <span class="field-label ellipsis"><i class="fas fa-heart-broken"></i>&nbsp;{{ localize 'COC.attributes.bg.abbrev' }}</span>
     </div>
     <div class="flex3 center cell">
-        <input class="field-value" name="data.attributes.bg.value" type="text" value="{{data.attributes.bg.value}}" placeholder="Value" data-dtype="Number"/>
+        <input class="field-value" name="system.attributes.bg.value" type="text" value="{{system.attributes.bg.value}}" placeholder="Value" data-dtype="Number"/>
     </div>
 </div>
