--- a/templates/actors/parts/stats/actor-madness.hbs
+++ b/templates/actors/parts/stats/actor-madness.hbs
@@ -12,7 +12,7 @@
         <span class="field-label ellipsis"><i class="fas fa-skull"></i>&nbsp;{{ localize 'COC.attributes.mad.abbrev' }}</span>
     </div>
     <div class="flex3 center cell">
-        <input class="field-value" name="data.attributes.mad.value" type="text" value="{{actor.data.attributes.mad.value}}" placeholder="Value" data-dtype="Number"/>
+        <input class="field-value" name="system.attributes.mad.value" type="text" value="{{actor.system.attributes.mad.value}}" placeholder="Value" data-dtype="Number"/>
     </div>
 </div>
 {{/if}}
