--- a/templates/items/parts/details/encounter-weapon-details.hbs
+++ b/templates/items/parts/details/encounter-weapon-details.hbs
@@ -3,21 +3,21 @@
 <div class="form-group">
     <label>{{localize "COC.ui.skill"}} (Mod)</label>
     <div class="form-fields">
-        <input name="data.weapon.mod" type="text" value="{{numberFormat data.weapon.mod decimals=0 sign=true}}" placeholder="{{localize "COC.ui.skillBonus"}}" data-dtype="Number">
+        <input name="system.weapon.mod" type="text" value="{{numberFormat system.weapon.mod decimals=0 sign=true}}" placeholder="{{localize "COC.ui.skillBonus"}}" data-dtype="Number">
     </div>
 </div>
 
 <div class="form-group">
     <label>{{localize "COC.ui.skillBonus"}}</label>
     <div class="form-fields">
-        <input name="data.weapon.skillBonus" type="text" value="{{numberFormat data.weapon.skillBonus decimals=0 sign=true}}" placeholder="{{localize "COC.ui.skillBonus"}}" data-dtype="Number">
+        <input name="system.weapon.skillBonus" type="text" value="{{numberFormat system.weapon.skillBonus decimals=0 sign=true}}" placeholder="{{localize "COC.ui.skillBonus"}}" data-dtype="Number">
     </div>
 </div>
 
 <div class="form-group">
     <label>{{localize "COC.ui.critrange"}}</label>
     <div class="form-fields">
-        <input name="data.weapon.critrange" type="text" value="{{data.weapon.critrange}}" placeholder="{{localize "COC.ui.critrange"}}" data-dtype="String">
+        <input name="system.weapon.critrange" type="text" value="{{system.weapon.critrange}}" placeholder="{{localize "COC.ui.critrange"}}" data-dtype="String">
     </div>
 </div>
 
@@ -26,14 +26,14 @@
 <div class="form-group">
     <label>{{localize "COC.ui.dmgBase"}}</label>
     <div class="form-fields">
-        <input name="data.weapon.dmg" type="text" value="{{data.weapon.dmg}}" placeholder="{{localize "COC.ui.dmgBase"}}" data-dtype="String">
+        <input name="system.weapon.dmg" type="text" value="{{system.weapon.dmg}}" placeholder="{{localize "COC.ui.dmgBase"}}" data-dtype="String">
     </div>
 </div>
 
 <div class="form-group">
     <label>{{localize "COC.ui.dmgBonus"}}</label>
     <div class="form-fields">
-        <input name="data.weapon.dmgBonus" type="text" value="{{numberFormat data.weapon.dmgBonus decimals=0 sign=true}}" placeholder="{{localize "COC.ui.dmgBonus"}}" data-dtype="Number">
+        <input name="system.weapon.dmgBonus" type="text" value="{{numberFormat system.weapon.dmgBonus decimals=0 sign=true}}" placeholder="{{localize "COC.ui.dmgBonus"}}" data-dtype="Number">
     </div>
 </div>
 
@@ -41,6 +41,6 @@
 <div class="form-group">
     <label>{{localize "COC.ui.range"}}</label>
     <div class="form-fields">
-        <input name="data.weapon.range" type="text" value="{{data.weapon.range}}" placeholder="{{localize "COC.ui.range"}}" data-dtype="String">
+        <input name="system.weapon.range" type="text" value="{{system.weapon.range}}" placeholder="{{localize "COC.ui.range"}}" data-dtype="String">
     </div>
 </div>
