--- a/templates/items/parts/details/path-details.hbs
+++ b/templates/items/parts/details/path-details.hbs
@@ -1,14 +1,14 @@
 {{> "systems/coc/templates/items/parts/details/setting-details.hbs"}}
 
 <h3 class="form-header">{{localize "COC.ui.properties"}}</h3>
-<input class="field-value" name="data.key" type="hidden" value="{{item.data.key}}" placeholder="{{ localize "COC.ui.key" }}" data-dtype="String">
+<input class="field-value" name="system.key" type="hidden" value="{{item.system.key}}" placeholder="{{ localize "COC.ui.key" }}" data-dtype="String">
 
 <div class="form-group stacked">
     <label>Type</label>
     <div class="form-fields">
-        <label class="checkbox"><input type="checkbox" name="data.properties.profile" {{checked data.properties.profile}}> {{localize "COC.properties.profile"}}</label>
-        <label class="checkbox"><input type="checkbox" name="data.properties.prestige" {{checked data.properties.prestige}}> {{localize "COC.properties.prestige"}}</label>
-        <label class="checkbox"><input type="checkbox" name="data.properties.alternative" {{checked data.properties.alternative}}> {{localize "COC.properties.alternative"}}</label>
+        <label class="checkbox"><input type="checkbox" name="system.properties.profile" {{checked system.properties.profile}}> {{localize "COC.properties.profile"}}</label>
+        <label class="checkbox"><input type="checkbox" name="system.properties.prestige" {{checked system.properties.prestige}}> {{localize "COC.properties.prestige"}}</label>
+        <label class="checkbox"><input type="checkbox" name="system.properties.alternative" {{checked system.properties.alternative}}> {{localize "COC.properties.alternative"}}</label>
     </div>
 </div>
 
@@ -21,7 +21,7 @@
             <a class="item-control item-create coc-compendium-pack" data-pack="coc.capacities" data-open="0" title="Ajouter une capacité"><i class="fas fa-plus"></i>&nbsp; Add</a>
         </div>
     </li>
-    {{#each data.capacities as |capacity id|}}
+    {{#each system.capacities as |capacity id|}}
     <ol class="item-list">
         <li class="item flexrow" data-item-id="{{capacity._id}}" data-item-type="capacity" data-key="{{capacity.data.key}}" draggable="true">
             <div class="item-name flexrow">
