--- a/templates/items/parts/details/setting-details.hbs
+++ b/templates/items/parts/details/setting-details.hbs
@@ -1,8 +1,8 @@
 <div class="form-group">
     <label>Setting</label>
     <div class="form-fields">
-        <select name="data.setting" data-type="String" style="width:100%">
-            {{#select data.setting}}
+        <select name="system.setting" data-type="String" style="width:100%">
+            {{#select system.setting}}
                 <option value="">{{localize "COC.None"}}</option>
                 <option value="base">{{localize "COC.setting.base"}}</option>
                 <option value="epouvante">{{localize "COC.setting.epouvante"}}</option>
