--- a/templates/items/parts/details/trait-details.hbs
+++ b/templates/items/parts/details/trait-details.hbs
@@ -4,8 +4,8 @@
 <div class="form-group">
     <label>Famille</label>
     <div class="form-fields">
-        <select name="data.family" data-type="String" style="width:100%">
-            {{#select data.family}}
+        <select name="system.family" data-type="String" style="width:100%">
+            {{#select system.family}}
                 <option value="">{{localize "COC.None"}}</option>
                 <option value="action">Action</option>
                 <option value="reflexion">Réflexion</option>
