--- a/templates/actors/parts/capacities/actor-paths.hbs
+++ b/templates/actors/parts/capacities/actor-paths.hbs
@@ -17,7 +17,7 @@
                         <a class="item-edit ellipsis" style="width: 100%; text-align: left" title="{{path.name}}">{{path.name}}</a>&nbsp;
                         <span class="path-controls item" data-item-id="{{path._id}}" style="padding-right:5px;"><a class="item-control item-delete" title="Delete Item"><i class="fas fa-times"></i></a></span>
                     </div>
-                    {{#each path.data.capacities as |capacity id|}}
+                    {{#each path.system.capacities as |capacity id|}}
                         <div class="gridcell gridcell-sm item capacity left color-default no-wrap" data-item-id="{{capacity._id}}" data-item-type="item" data-pack="capacities" data-path-id="{{path._id}}">
                             {{#if capacity.data.checked}}
                                 <a class="capacity-control capacity-checked" title="{{capacity.name}}"><i class="fas fa-square"></i></a>&nbsp;
@@ -36,10 +36,10 @@
                 <div class="flex1 left">
                     <h3>{{localize "COC.ui.activeCapacities"}}</h3>
                 </div>
-                <div class="flex1 right {{#if (isNegative actor.data.xp.value)}}red{{/if}}">
-                    <span class="field-label">{{localize "COC.ui.CapacityPoints"}} {{actor.data.xp.value}}/{{actor.data.xp.max}}</span>
-                    <input name="data.xp.value" type="hidden" value="{{actor.data.xp.value}}" data-dtype="Number"/>
-                    <input name="data.xp.max" type="hidden" value="{{actor.data.xp.max}}" data-dtype="Number"/>
+                <div class="flex1 right {{#if (isNegative actor.system.xp.value)}}red{{/if}}">
+                    <span class="field-label">{{localize "COC.ui.CapacityPoints"}} {{actor.system.xp.value}}/{{actor.system.xp.max}}</span>
+                    <input name="system.xp.value" type="hidden" value="{{actor.system.xp.value}}" data-dtype="Number"/>
+                    <input name="system.xp.max" type="hidden" value="{{actor.system.xp.max}}" data-dtype="Number"/>
                 </div>
             </div>
         {{/if}}
@@ -83,20 +83,20 @@
 {{!--        </div>--}}
 {{!--        {{#if (equals actor.type "character")}}--}}
 {{!--            <hr/>--}}
-{{!--            {{#if (isNegative actor.data.xp.value)}}--}}
+{{!--            {{#if (isNegative actor.system.xp.value)}}--}}
 {{!--                <div class="row flexrow red">--}}
 {{!--                    <div class="flex1 right">--}}
-{{!--                        <span class="field-label">Points de capacités {{actor.data.xp.value}}/{{actor.data.xp.max}}</span>--}}
-{{!--                        <input name="data.xp.value" type="hidden" value="{{actor.data.xp.value}}" data-dtype="Number"/>--}}
-{{!--                        <input name="data.xp.max" type="hidden" value="{{actor.data.xp.max}}" data-dtype="Number"/>--}}
+{{!--                        <span class="field-label">Points de capacités {{actor.system.xp.value}}/{{actor.system.xp.max}}</span>--}}
+{{!--                        <input name="system.xp.value" type="hidden" value="{{actor.system.xp.value}}" data-dtype="Number"/>--}}
+{{!--                        <input name="system.xp.max" type="hidden" value="{{actor.system.xp.max}}" data-dtype="Number"/>--}}
 {{!--                    </div>--}}
 {{!--                </div>--}}
 {{!--            {{else}}--}}
 {{!--                <div class="row flexrow">--}}
 {{!--                    <div class="flex1 right">--}}
-{{!--                        <span class="field-label">Points de capacités {{actor.data.xp.value}}/{{actor.data.xp.max}}</span>--}}
-{{!--                        <input name="data.xp.value" type="hidden" value="{{actor.data.xp.value}}" data-dtype="Number"/>--}}
-{{!--                        <input name="data.xp.max" type="hidden" value="{{actor.data.xp.max}}" data-dtype="Number"/>--}}
+{{!--                        <span class="field-label">Points de capacités {{actor.system.xp.value}}/{{actor.system.xp.max}}</span>--}}
+{{!--                        <input name="system.xp.value" type="hidden" value="{{actor.system.xp.value}}" data-dtype="Number"/>--}}
+{{!--                        <input name="system.xp.max" type="hidden" value="{{actor.system.xp.max}}" data-dtype="Number"/>--}}
 {{!--                    </div>--}}
 {{!--                </div>--}}
 {{!--            {{/if}}--}}
