--- a/templates/actors/parts/capacities/encounter-capacities.hbs
+++ b/templates/actors/parts/capacities/encounter-capacities.hbs
@@ -18,18 +18,18 @@
                         <h4>{{name}}</h4>
                     </div>
                     {{#with capacity}}
-                        <div class="item-detail">{{#if data.rank}}{{data.rank}}{{/if}}</div>
-                        <div class="item-detail">{{#if data.limited}}L{{/if}}</div>
-                        <div class="item-detail">{{#if data.spell}}&#10033;{{/if}}</div>
+                        <div class="item-detail">{{#if system.rank}}{{system.rank}}{{/if}}</div>
+                        <div class="item-detail">{{#if system.limited}}L{{/if}}</div>
+                        <div class="item-detail">{{#if system.spell}}&#10033;{{/if}}</div>
                         <div class="item-controls">
                             <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                             <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
                         </div>
                         <div class="item-summary" style="display: none">
-                            {{{data.description}}}
+                            {{{system.description}}}
                             <div class="item-properties">
-                                {{#if data.spell}}<span class="tag">{{localize "COC.ui.spell"}}</span>{{/if}}
-                                {{#if data.limited}}<span class="tag">{{localize "COC.ui.limited"}}</span>{{/if}}
+                                {{#if system.spell}}<span class="tag">{{localize "COC.ui.spell"}}</span>{{/if}}
+                                {{#if system.limited}}<span class="tag">{{localize "COC.ui.limited"}}</span>{{/if}}
                             </div>
                         </div>
                     {{/with}}
