--- a/templates/actors/parts/combat/character-combat-item.hbs
+++ b/templates/actors/parts/combat/character-combat-item.hbs
@@ -4,29 +4,29 @@
         <h4>{{name}}</h4>
     </div>
     {{#if (isNotLimited @root)}}
-        {{#if data.def}}<div class="item-detail">{{numberFormat data.def decimals=0 sign=true}}</div>{{else}}<div class="item-detail"></div>{{/if}}
+        {{#if system.def}}<div class="item-detail">{{numberFormat system.def decimals=0 sign=true}}</div>{{else}}<div class="item-detail"></div>{{/if}}
         <div class="item-detail">
-            {{#if data.properties.ranged}}{{data.range}}{{/if}}
+            {{#if system.properties.ranged}}{{system.range}}{{/if}}
         </div>
         <div class="item-detail">
-            {{#if (equals data.slot "hand")}}
-                {{#if data.properties.2H}}
+            {{#if (equals system.slot "hand")}}
+                {{#if system.properties.2H}}
                     <i class="fas fa-hand-paper"></i><i class="fas fa-hand-paper"></i>
                 {{else}}
                     <i class="fas fa-hand-paper"></i>
                 {{/if}}
             {{/if}}
-        </div>        
+        </div>
         <div class="item-detail item-critrange">
-            {{#if data.properties.weapon}}{{data.critrange}}{{/if}}
+            {{#if system.properties.weapon}}{{system.critrange}}{{/if}}
         </div>
-        <div class="item-detail item-mod" data-item-mod="{{data.mod}}">
-            {{#if data.properties.weapon}}{{data.mod}}{{/if}}
+        <div class="item-detail item-mod" data-item-mod="{{system.mod}}">
+            {{#if system.properties.weapon}}{{system.mod}}{{/if}}
         </div>
-        <div class="item-detail item-dmg" data-item-dmg="{{data.dmg}}">{{#if data.properties.weapon}}{{data.dmg}}{{/if}}</div>
+        <div class="item-detail item-dmg" data-item-dmg="{{system.dmg}}">{{#if system.properties.weapon}}{{system.dmg}}{{/if}}</div>
         {{#if @root.editable}}
             <div class="item-controls">
-                {{#if data.properties.weapon}}
+                {{#if system.properties.weapon}}
                     <a class="item-control rollable" data-roll-type="weapon"><i class="fas fa-dice-d20"></i></a>
                     <a class="item-control rollable" data-roll-type="damage"><i class="fas fa-dice"></i></a>
                 {{/if}}
