--- a/templates/actors/parts/stats/actor-recovery.hbs
+++ b/templates/actors/parts/stats/actor-recovery.hbs
@@ -18,19 +18,19 @@
     </div>
     <div class="flexrow no-wrap recovery">
         <div class="flex8 center cell-header">
-            <span class="field-label ellipsis rollable" data-rolling="data.attributes.hp" data-roll-type="recovery" title="dépenser un PR avec PV, SHIFT+click sans PV"><i class="fas fa-heartbeat"></i>&nbsp;</span>{{ localize 'COC.attributes.rp.abbrev' }}
+            <span class="field-label ellipsis rollable" data-rolling="system.attributes.hp" data-roll-type="recovery" title="dépenser un PR avec PV, SHIFT+click sans PV"><i class="fas fa-heartbeat"></i>&nbsp;</span>{{ localize 'COC.attributes.rp.abbrev' }}
         </div>
         <div class="flex3 center cell">
-            <input class="field-value" name="data.attributes.rp.base" type="text" value="{{actor.data.attributes.rp.base}}" placeholder="Base" data-dtype="Number"/>
+            <input class="field-value" name="system.attributes.rp.base" type="text" value="{{actor.system.attributes.rp.base}}" placeholder="Base" data-dtype="Number"/>
         </div>
         <div class="flex3 center cell">
-            <input class="field-value" name="data.attributes.rp.bonus" type="text" value="{{actor.data.attributes.rp.bonus}}" placeholder="Bonus" data-dtype="Number"/>
+            <input class="field-value" name="system.attributes.rp.bonus" type="text" value="{{actor.system.attributes.rp.bonus}}" placeholder="Bonus" data-dtype="Number"/>
         </div>
         <div class="flex3 center cell">
-            <input class="field-value" name="data.attributes.rp.max" type="text" readonly="true" value="{{actor.data.attributes.rp.max}}" placeholder="Max" data-dtype="Number"/>
-        </div>        
+            <input class="field-value" name="system.attributes.rp.max" type="text" readonly="true" value="{{actor.system.attributes.rp.max}}" placeholder="Max" data-dtype="Number"/>
+        </div>
         <div class="flex3 center cell">
-            <input class="field-value" name="data.attributes.rp.value" type="text" value="{{actor.data.attributes.rp.value}}" placeholder="Value" data-dtype="Number"/>
+            <input class="field-value" name="system.attributes.rp.value" type="text" value="{{actor.system.attributes.rp.value}}" placeholder="Value" data-dtype="Number"/>
         </div>
     </div>
     <div class="flexrow"><div class="flex1 half-spacer"></div></div>
