--- a/templates/items/parts/details/equipment-details.hbs
+++ b/templates/items/parts/details/equipment-details.hbs
@@ -3,24 +3,24 @@
 <div class="form-group">
     <label>{{localize "COC.ui.properties"}}</label>
     <div class="form-fields">
-        <label class="checkbox"> <input type="checkbox" name="data.properties.equipable" {{checked data.properties.equipable}}> {{localize "COC.ui.equipable"}}</label>
-{{#if (not data.properties.unique)}}
-        <label class="checkbox"> <input type="checkbox" name="data.properties.stackable" {{checked data.properties.stackable}}> {{localize "COC.ui.stackable"}}</label>
+        <label class="checkbox"> <input type="checkbox" name="system.properties.equipable" {{checked system.properties.equipable}}> {{localize "COC.ui.equipable"}}</label>
+{{#if (not system.properties.unique)}}
+        <label class="checkbox"> <input type="checkbox" name="system.properties.stackable" {{checked system.properties.stackable}}> {{localize "COC.ui.stackable"}}</label>
 {{/if}}
-{{#if (not data.properties.stackable)}}
-        <label class="checkbox"> <input type="checkbox" name="data.properties.unique"    {{checked data.properties.unique}}> {{localize "COC.properties.unique"}}</label>
+{{#if (not system.properties.stackable)}}
+        <label class="checkbox"> <input type="checkbox" name="system.properties.unique"    {{checked system.properties.unique}}> {{localize "COC.properties.unique"}}</label>
 {{/if}}
-        <label class="checkbox"><input type="checkbox" name="data.properties.consumable" {{checked data.properties.consumable}}> {{localize "COC.properties.consumable"}}</label>
-        <label class="checkbox"> <input type="checkbox" name="data.properties.tailored"  {{checked data.properties.tailored}}> {{localize "COC.properties.tailored"}}</label>
-        <label class="checkbox"><input type="checkbox" name="data.properties.2H" {{checked data.properties.2H}}> {{localize "COC.ui.2H"}}</label>
+        <label class="checkbox"><input type="checkbox" name="system.properties.consumable" {{checked system.properties.consumable}}> {{localize "COC.properties.consumable"}}</label>
+        <label class="checkbox"> <input type="checkbox" name="system.properties.tailored"  {{checked system.properties.tailored}}> {{localize "COC.properties.tailored"}}</label>
+        <label class="checkbox"><input type="checkbox" name="system.properties.2H" {{checked system.properties.2H}}> {{localize "COC.ui.2H"}}</label>
     </div>
 </div>
-{{#if data.properties.equipable}}
+{{#if system.properties.equipable}}
     <div class="form-group">
         <label>{{localize "COC.ui.slot"}}</label>
         <div class="form-fields">
-            <select name="data.slot" data-type="String" style="width:100%">
-                {{#select data.slot}}
+            <select name="system.slot" data-type="String" style="width:100%">
+                {{#select system.slot}}
                     <option value="">{{localize "COC.None"}}</option>
                     <option value="hand">{{localize "COC.slot.hand"}}</option>
                     <option value="head">{{localize "COC.slot.head"}}</option>
@@ -44,23 +44,23 @@
     </div>
 {{/if}}
 <div class="form-group">
-    <label>{{ localize "COC.ui.price" }}</label>&nbsp; <input type="number" name="data.price" value="{{data.price}}" data-dtype="Number"/>
+    <label>{{ localize "COC.ui.price" }}</label>&nbsp; <input type="number" name="system.price" value="{{system.price}}" data-dtype="Number"/>
 </div>
 <div class="form-group">
-    <label>{{ localize "COC.ui.strmin" }}</label>&nbsp; <input type="number" name="data.strmin" value="{{data.strmin}}" data-dtype="Number"/>
+    <label>{{ localize "COC.ui.strmin" }}</label>&nbsp; <input type="number" name="system.strmin" value="{{system.strmin}}" data-dtype="Number"/>
 </div>
 
-{{#if data.properties.stackable}}
+{{#if system.properties.stackable}}
     <div class="form-group">
         <label>{{ localize "COC.ui.quantity" }}</label>
         <div class="form-fields">
-            <input type="number" name="data.qty" value="{{data.qty}}" placeholder="{{localize "COC.ui.quantity"}}" data-dtype="Number"/>
+            <input type="number" name="system.qty" value="{{system.qty}}" placeholder="{{localize "COC.ui.quantity"}}" data-dtype="Number"/>
         </div>
     </div>
     <div class="form-group">
         <label>{{localize "COC.ui.stacksize"}}</label>
         <div class="form-fields">
-            <input name="data.stacksize" type="text" value="{{data.stacksize}}" placeholder="{{localize "COC.placeholders.stacksize"}}" data-dtype="Number">
+            <input name="system.stacksize" type="text" value="{{system.stacksize}}" placeholder="{{localize "COC.placeholders.stacksize"}}" data-dtype="Number">
         </div>
     </div>
 {{/if}}
