--- a/templates/items/parts/details/item-details.hbs
+++ b/templates/items/parts/details/item-details.hbs
@@ -2,8 +2,8 @@
 <div class="form-group">
     <label>Sous-catégorie</label>
     <div class="form-fields">
-        <select name="data.subtype" data-type="String" style="width:100%">
-            {{#select data.subtype}}
+        <select name="system.subtype" data-type="String" style="width:100%">
+            {{#select system.subtype}}
                 {{#each config.itemCategories as | category id |}}
                     <option value="{{id}}">{{localize category}}</option>
                 {{/each}}
@@ -18,39 +18,39 @@
     <label>Traits</label>
     <div class="form-fields">
         <label class="checkbox">
-            <input type="checkbox" name="data.properties.equipment" {{checked data.properties.equipment}}> {{localize "COC.properties.equipment"}}
+            <input type="checkbox" name="system.properties.equipment" {{checked system.properties.equipment}}> {{localize "COC.properties.equipment"}}
         </label>
         <label class="checkbox">
-            <input type="checkbox" name="data.properties.weapon" {{checked data.properties.weapon}}> {{localize "COC.properties.weapon"}}
+            <input type="checkbox" name="system.properties.weapon" {{checked system.properties.weapon}}> {{localize "COC.properties.weapon"}}
         </label>
         <label class="checkbox">
-            <input type="checkbox" name="data.properties.protection" {{checked data.properties.protection}}> {{localize "COC.properties.protection"}}
+            <input type="checkbox" name="system.properties.protection" {{checked system.properties.protection}}> {{localize "COC.properties.protection"}}
         </label>
         <label class="checkbox">
-            <input type="checkbox" name="data.properties.ranged" {{checked data.properties.ranged}}> {{localize "COC.properties.ranged"}}
+            <input type="checkbox" name="system.properties.ranged" {{checked system.properties.ranged}}> {{localize "COC.properties.ranged"}}
         </label>
         <label class="checkbox">
-            <input type="checkbox" name="data.properties.effects" {{checked data.properties.effects}}> {{localize "COC.properties.effects"}}
+            <input type="checkbox" name="system.properties.effects" {{checked system.properties.effects}}> {{localize "COC.properties.effects"}}
         </label>
     </div>
 </div>
 
-{{#if data.properties.equipment}}
+{{#if system.properties.equipment}}
     {{> "systems/coc/templates/items/parts/details/equipment-details.hbs"}}
 {{/if}}
-{{#if data.properties.weapon}}
+{{#if system.properties.weapon}}
     {{> "systems/coc/templates/items/parts/details/weapon-details.hbs"}}
 {{/if}}
-{{#if data.properties.protection}}
+{{#if system.properties.protection}}
     {{> "systems/coc/templates/items/parts/details/protection-details.hbs"}}
 {{/if}}
-{{#if data.properties.ranged}}
+{{#if system.properties.ranged}}
     {{> "systems/coc/templates/items/parts/details/ranged-details.hbs"}}
 {{/if}}
-{{#if data.properties.effects}}
+{{#if system.properties.effects}}
     {{> "systems/coc/templates/items/parts/details/effects-details.hbs"}}
 {{/if}}
-{{#if data.properties.spell}}
+{{#if system.properties.spell}}
     {{> "systems/coc/templates/items/parts/details/spell-details.hbs"}}
 {{/if}}
 {{#if actor}}
