--- a/templates/items/parts/details/profile-details.hbs
+++ b/templates/items/parts/details/profile-details.hbs
@@ -1,12 +1,12 @@
 {{> "systems/coc/templates/items/parts/details/setting-details.hbs"}}
 
 <h3 class="form-header">{{localize "COC.ui.properties"}}</h3>
-<input class="field-value" name="data.key" type="hidden" value="{{item.data.key}}" placeholder="{{ localize "COC.ui.key" }}" data-dtype="String">
+<input class="field-value" name="system.key" type="hidden" value="{{item.system.key}}" placeholder="{{ localize "COC.ui.key" }}" data-dtype="String">
 <div class="form-group">
     <label>{{localize "COC.ui.hd"}}</label>
     <div class="form-fields">
-        <select name="data.dv" data-type="String" style="width:100%">
-            {{#select data.dv}}
+        <select name="system.dv" data-type="String" style="width:100%">
+            {{#select system.dv}}
                 <option value="">{{localize "COC.None"}}</option>
                 <option value="1d4">d4</option>
                 <option value="1d6">d6</option>
@@ -22,8 +22,8 @@
 <div class="form-group">
     <label>Famille de profil</label>
     <div class="form-fields">
-        <select name="data.family" data-type="String" style="width:100%">
-            {{#select data.family}}
+        <select name="system.family" data-type="String" style="width:100%">
+            {{#select system.family}}
                 <option value="">{{localize "COC.None"}}</option>
                 <option value="action">Action</option>
                 <option value="adventure">Aventure</option>
@@ -36,8 +36,8 @@
 <div class="form-group">
     <label>{{localize "COC.ui.spellcasting"}}</label>
     <div class="form-fields">
-        <select name="data.spellcasting" data-type="String" style="width:100%">
-            {{#select data.spellcasting}}
+        <select name="system.spellcasting" data-type="String" style="width:100%">
+            {{#select system.spellcasting}}
                 <option value="">{{localize "COC.None"}}</option>
                 <option value="@stats.int.mod">{{localize "COC.stats.int.label"}}</option>
                 <option value="@stats.wis.mod">{{localize "COC.stats.wis.label"}}</option>
@@ -53,31 +53,31 @@
 <div class="form-group">
     <label>{{localize "COC.attacks.melee.label"}}</label>
     <div class="form-fields">
-        <input class="field-value" name="data.bonuses.atc" type="text" value="{{numberFormat data.bonuses.atc decimals=0 sign=true}}" placeholder="{{localize "COC.attacks.melee.label"}}" data-dtype="Number">
+        <input class="field-value" name="system.bonuses.atc" type="text" value="{{numberFormat system.bonuses.atc decimals=0 sign=true}}" placeholder="{{localize "COC.attacks.melee.label"}}" data-dtype="Number">
     </div>
 </div>
 <div class="form-group">
     <label>{{localize "COC.attacks.ranged.label"}}</label>
     <div class="form-fields">
-        <input class="field-value" name="data.bonuses.atd" type="text" value="{{numberFormat data.bonuses.atd decimals=0 sign=true}}" placeholder="{{localize "COC.attacks.ranged.label"}}" data-dtype="Number">
+        <input class="field-value" name="system.bonuses.atd" type="text" value="{{numberFormat system.bonuses.atd decimals=0 sign=true}}" placeholder="{{localize "COC.attacks.ranged.label"}}" data-dtype="Number">
     </div>
 </div>
 <div class="form-group">
     <label>{{localize "COC.attacks.magic.label"}}</label>
     <div class="form-fields">
-        <input class="field-value" name="data.bonuses.atm" type="text" value="{{numberFormat data.bonuses.atm decimals=0 sign=true}}" placeholder="{{localize "COC.attacks.magic.label"}}" data-dtype="Number">
+        <input class="field-value" name="system.bonuses.atm" type="text" value="{{numberFormat system.bonuses.atm decimals=0 sign=true}}" placeholder="{{localize "COC.attacks.magic.label"}}" data-dtype="Number">
     </div>
 </div>
 <div class="form-group">
     <label>{{getFpLabel}}</label>
     <div class="form-fields">
-        <input class="field-value" name="data.bonuses.fp" type="text" value="{{numberFormat data.bonuses.fp decimals=0 sign=true}}" placeholder="{{getFpLabel}}" data-dtype="Number">
+        <input class="field-value" name="system.bonuses.fp" type="text" value="{{numberFormat system.bonuses.fp decimals=0 sign=true}}" placeholder="{{getFpLabel}}" data-dtype="Number">
     </div>
 </div>
 <div class="form-group">
     <label>{{localize "COC.attributes.xp.label"}}</label>
     <div class="form-fields">
-        <input class="field-value" name="data.bonuses.xp" type="text" value="{{numberFormat data.bonuses.xp decimals=0 sign=true}}" placeholder="{{localize "COC.attributes.xp.label"}}" data-dtype="Number">
+        <input class="field-value" name="system.bonuses.xp" type="text" value="{{numberFormat system.bonuses.xp decimals=0 sign=true}}" placeholder="{{localize "COC.attributes.xp.label"}}" data-dtype="Number">
     </div>
 </div>
 
@@ -90,9 +90,9 @@
             <a class="item-control item-create coc-compendium-pack" data-pack="coc.paths" data-open="0" title="Ajouter une voie"><i class="fas fa-plus"></i>&nbsp; Add</a>
         </div>
     </li>
-{{#each data.paths}}
+{{#each system.paths}}
     <ol class="item-list">
-        <li class="item flexrow" data-item-id="{{_id}}" data-item-type="path" data-key="{{data.key}}" draggable="true">
+        <li class="item flexrow" data-item-id="{{_id}}" data-item-type="path" data-key="{{system.key}}" draggable="true">
             <div class="item-name flexrow">
                 <div class="item-image" style="background-image: url('{{img}}')"></div>
                 <h4>{{name}}</h4>
