--- a/templates/items/parts/details/ranged-details.hbs
+++ b/templates/items/parts/details/ranged-details.hbs
@@ -2,32 +2,32 @@
 <div class="form-group">
     <label>{{localize "COC.ui.range"}}</label>
     <div class="form-fields">
-        <input name="data.range" type="text" value="{{item.data.range}}" placeholder="Range" data-dtype="Number">
+        <input name="system.range" type="text" value="{{item.system.range}}" placeholder="Range" data-dtype="Number">
     </div>
 </div>
 <div class="form-group">
     <label>Propriétés</label>
     <div class="form-fields">
         <label class="checkbox">
-            <input type="checkbox" name="data.properties.reloadable" {{checked item.data.properties.reloadable}}> {{localize "COC.properties.reloadable"}}
+            <input type="checkbox" name="system.properties.reloadable" {{checked item.system.properties.reloadable}}> {{localize "COC.properties.reloadable"}}
         </label>
         <label class="checkbox">
-            <input type="checkbox" name="data.properties.salve" {{checked item.data.properties.salve}}> {{localize "COC.properties.salve"}}
+            <input type="checkbox" name="system.properties.salve" {{checked item.system.properties.salve}}> {{localize "COC.properties.salve"}}
         </label>
         <label class="checkbox">
-            <input type="checkbox" name="data.properties.proneshot" {{checked item.data.properties.proneshot}}> {{localize "COC.properties.proneshot"}}
+            <input type="checkbox" name="system.properties.proneshot" {{checked item.system.properties.proneshot}}> {{localize "COC.properties.proneshot"}}
         </label>
         <label class="checkbox">
-            <input type="checkbox" name="data.properties.explosive" {{checked item.data.properties.explosive}}> {{localize "COC.properties.explosive"}}
+            <input type="checkbox" name="system.properties.explosive" {{checked item.system.properties.explosive}}> {{localize "COC.properties.explosive"}}
         </label>
     </div>
 </div>
-{{#if data.properties.reloadable}}
+{{#if system.properties.reloadable}}
     <div class="form-group">
         <label>{{localize "COC.ui.reload"}}</label>
         <div class="form-fields">
-            <select name="data.reload" data-type="String" style="width:100%">
-                {{#select data.reload}}
+            <select name="system.reload" data-type="String" style="width:100%">
+                {{#select system.reload}}
                     <option value="">{{localize "COC.ui.noAction"}}</option>
                     <option value="s">{{localize "COC.ui.simpleAction"}}</option>
                     <option value="l">{{localize "COC.ui.limitedAction"}}</option>
