--- a/templates/items/parts/details/spell-details.hbs
+++ b/templates/items/parts/details/spell-details.hbs
@@ -3,7 +3,7 @@
     <label>Propriétés</label>
     <div class="form-fields">
         <label class="checkbox">
-            <input type="checkbox" name="data.properties.activable" {{checked item.data.properties.activable}}> {{localize "COC.properties.activable"}}
+            <input type="checkbox" name="system.properties.activable" {{checked item.system.properties.activable}}> {{localize "COC.properties.activable"}}
         </label>
     </div>
 </div>
