--- a/templates/items/parts/details/usage-details.hbs
+++ b/templates/items/parts/details/usage-details.hbs
@@ -2,12 +2,12 @@
 <div class="form-group stacked">
     <label>Propriétés</label>
     <div class="form-fields">
-        <label class="checkbox"><input type="checkbox" name="data.properties.proficient" {{checked data.properties.proficient}}> {{localize "COC.properties.proficient"}}</label>
-        <label class="checkbox"><input type="checkbox" name="data.properties.predilection" {{checked data.properties.predilection}}> {{localize "COC.properties.predilection"}}</label>
-        <label class="checkbox"><input type="checkbox" name="data.properties.finesse" {{checked data.properties.finesse}}> {{localize "COC.properties.finesse"}}</label>
-        <label class="checkbox"><input type="checkbox" name="data.properties.sneak" {{checked data.properties.sneak}}> {{localize "COC.properties.sneak"}}</label>
-        <label class="checkbox"><input type="checkbox" name="data.properties.powerful" {{checked data.properties.powerful}}> {{localize "COC.properties.powerful"}}</label>
-        <label class="checkbox"><input type="checkbox" name="data.properties.critscience" {{checked data.properties.critscience}}> {{localize "COC.properties.critscience"}}</label>
-        <label class="checkbox"><input type="checkbox" name="data.properties.specialization" {{checked data.properties.specialization}}> {{localize "COC.properties.specialization"}}</label>
+        <label class="checkbox"><input type="checkbox" name="system.properties.proficient" {{checked system.properties.proficient}}> {{localize "COC.properties.proficient"}}</label>
+        <label class="checkbox"><input type="checkbox" name="system.properties.predilection" {{checked system.properties.predilection}}> {{localize "COC.properties.predilection"}}</label>
+        <label class="checkbox"><input type="checkbox" name="system.properties.finesse" {{checked system.properties.finesse}}> {{localize "COC.properties.finesse"}}</label>
+        <label class="checkbox"><input type="checkbox" name="system.properties.sneak" {{checked system.properties.sneak}}> {{localize "COC.properties.sneak"}}</label>
+        <label class="checkbox"><input type="checkbox" name="system.properties.powerful" {{checked system.properties.powerful}}> {{localize "COC.properties.powerful"}}</label>
+        <label class="checkbox"><input type="checkbox" name="system.properties.critscience" {{checked system.properties.critscience}}> {{localize "COC.properties.critscience"}}</label>
+        <label class="checkbox"><input type="checkbox" name="system.properties.specialization" {{checked system.properties.specialization}}> {{localize "COC.properties.specialization"}}</label>
     </div>
 </div>
