--- a/templates/items/parts/details/weapon-details.hbs
+++ b/templates/items/parts/details/weapon-details.hbs
@@ -2,8 +2,8 @@
 <div class="form-group">
     <label>{{localize "COC.ui.skill"}}</label>
     <div class="form-fields">
-        <select name="data.skill" data-type="String" style="width:100%">
-            {{#select data.skill}}
+        <select name="system.skill" data-type="String" style="width:100%">
+            {{#select system.skill}}
                 <option value="@attacks.melee.mod">{{localize "COC.attacks.melee.label"}}</option>
                 <option value="@attacks.ranged.mod">{{localize "COC.attacks.ranged.label"}}</option>
                 <option value="@attacks.magic.mod">{{localize "COC.attacks.magic.label"}}</option>
@@ -15,22 +15,22 @@
 <div class="form-group">
     <label>{{localize "COC.ui.skillBonus"}}</label>
     <div class="form-fields">
-        <input name="data.skillBonus" type="text" value="{{numberFormat data.skillBonus decimals=0 sign=true}}" placeholder="{{localize "COC.ui.skillBonus"}}" data-dtype="Number">
+        <input name="system.skillBonus" type="text" value="{{numberFormat system.skillBonus decimals=0 sign=true}}" placeholder="{{localize "COC.ui.skillBonus"}}" data-dtype="Number">
     </div>
 </div>
 
 <div class="form-group">
     <label>{{localize "COC.ui.dmgBase"}}</label>
     <div class="form-fields">
-        <input name="data.dmgBase" type="text" value="{{data.dmgBase}}" placeholder="{{localize "COC.ui.dmgBase"}}" data-dtype="String">
+        <input name="system.dmgBase" type="text" value="{{system.dmgBase}}" placeholder="{{localize "COC.ui.dmgBase"}}" data-dtype="String">
     </div>
 </div>
 
 <div class="form-group">
     <label>{{localize "COC.ui.dmgStat"}}</label>
     <div class="form-fields">
-        <select name="data.dmgStat" data-type="String" style="width:100%">
-            {{#select data.dmgStat}}
+        <select name="system.dmgStat" data-type="String" style="width:100%">
+            {{#select system.dmgStat}}
                 <option value="">{{localize "COC.None"}}</option>
                 <option value="@stats.str.mod">{{localize "COC.stats.str.label"}}</option>
                 <option value="@stats.dex.mod">{{localize "COC.stats.dex.label"}}</option>
@@ -46,24 +46,24 @@
 <div class="form-group">
     <label>{{localize "COC.ui.dmgBonus"}}</label>
     <div class="form-fields">
-        <input name="data.dmgBonus" type="text" value="{{numberFormat data.dmgBonus decimals=0 sign=true}}" placeholder="{{localize "COC.ui.dmgBonus"}}" data-dtype="Number">
+        <input name="system.dmgBonus" type="text" value="{{numberFormat system.dmgBonus decimals=0 sign=true}}" placeholder="{{localize "COC.ui.dmgBonus"}}" data-dtype="Number">
     </div>
 </div>
 
 <div class="form-group">
     <label>{{localize "COC.ui.critrange"}}</label>
     <div class="form-fields">
-        <input name="data.critrange" type="text" value="{{data.critrange}}" placeholder="{{localize "COC.ui.critrange"}}" data-dtype="String">
+        <input name="system.critrange" type="text" value="{{system.critrange}}" placeholder="{{localize "COC.ui.critrange"}}" data-dtype="String">
     </div>
 </div>
 <div class="form-group">
     <label>Propriétés</label>
     <div class="form-fields">
         <label class="checkbox">
-            <input type="checkbox" name="data.properties.bashing" {{checked item.data.properties.bashing}}> {{localize "COC.properties.bashing"}}
+            <input type="checkbox" name="system.properties.bashing" {{checked item.system.properties.bashing}}> {{localize "COC.properties.bashing"}}
         </label>
         <label class="checkbox">
-            <input type="checkbox" name="data.properties.13strmin" {{checked item.data.properties.13strmin}}> {{localize "COC.properties.13strmin"}}
+            <input type="checkbox" name="system.properties.13strmin" {{checked item.system.properties.13strmin}}> {{localize "COC.properties.13strmin"}}
         </label>
     </div>
 </div>
