--- a/templates/items/parts/properties/capacity-properties.hbs
+++ b/templates/items/parts/properties/capacity-properties.hbs
@@ -1,6 +1,6 @@
 <div class="item-properties">
 <ol class="properties-list">
-    {{#if item.data.limited}}<li>{{localize "COC.ui.limited"}}</li>{{/if}}
-    {{#if item.data.spell}}<li>{{localize "COC.ui.spell"}}</li>{{/if}}
+    {{#if item.system.limited}}<li>{{localize "COC.ui.limited"}}</li>{{/if}}
+    {{#if item.system.spell}}<li>{{localize "COC.ui.spell"}}</li>{{/if}}
 </ol>
 </div>
